<resources>
    <!--Menu Strings-->
    <string name="app_name">CovidSmartApp</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="booking">Bookings</string>
    <string name="history">History</string>
    <string name="more">More</string>
    <string name="adminHome">Admin Home</string>
    <string name="doctorHome">Doctor Home</string>
    <string name="ctHome">Contact Tracer Home</string>
    <string name="update">Update</string>
    <string name="updateVaccination">Vaccination</string>
    <string name="updateTest">Tests</string>

    <!--App Strings-->
    <string name="covidSitrep">For more information on COVID-19 in Singapore, visit the COVID-19 Situation Report website by the Ministry of Health by clicking the button below</string>
    <string name="covidTip1">Getting yourself vaccinated is the best way to reduce the spread of COVID-19. It is as it will prevent you from hospitalization, severe illness, and even death.</string>
    <string name="covidTip2">Everyone aged two years and above should properly wear a well-fitting face mask. It is as, the mask with the best fit will provide optimal protection from the virus.</string>
    <string name="covidTip3">Maintain a safe distance of 1m between yourself and others.</string>
    <string name="covidTip4">Wash your hands often with soap and water for at least 20 seconds. If soap and water are not readily available, use a hand sanitizer.</string>
    <string name="covidTip5">Avoid touching your eyes, nose, and mouth with unwashed hands. Especially when you have been to public places, after coughing, or sneezing.</string>
    <string name="covidTip6">Clean high-touch surfaces such as tables, doorknobs, countertops, desks, phones, keyboards, and sinks.</string>
    <string name="travelTip1">Upon arrival, all travelers are to take a PCR test on their own. </string>
    <string name="travelTip2">While waiting for the status of the test results, travelers are required to quarantine themself in a hotel.</string>
    <string name="travelTip3">If the results are negative, travelers are allowed to enter the country. If the results are positive, travelers are not allowed to enter the country.</string>
    <string name="travelTip4">Travelers are required to show their vaccination certificates.</string>
    <string name="travelTip5">All travelers are required to fill up an ‘arrival white card’. The Immigration officer will scan this and check the particulars against the passport.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>