<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/doctorPanel"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/doctorPanel"/>
    <item
        android:id="@+id/updateVaccination"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_edit_note_24"
        android:title="@string/updateVaccination"/>
    <item
        android:id="@+id/updateTest"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_edit_note_24"
        android:title="@string/updateTest"/>
    <item
        android:id="@+id/navMore"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:title="@string/more"/>

</menu>